[gd_scene load_steps=17 format=2]

[ext_resource path="res://rythm_game/ResultsScene.gd" type="Script" id=1]
[ext_resource path="res://styles/PanelStyleTransparent.tres" type="StyleBox" id=2]
[ext_resource path="res://fonts/ResultsTitleFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/ResultsAuthorFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://graphics/background.png" type="Texture" id=5]
[ext_resource path="res://fonts/Rating_Font.tres" type="DynamicFont" id=6]
[ext_resource path="res://menus/visualizer/Visualizer.gd" type="Script" id=7]
[ext_resource path="res://menus/HorizontalSimpleMenu.gd" type="Script" id=8]
[ext_resource path="res://Theme_Game.tres" type="Theme" id=9]
[ext_resource path="res://menus/HBMenuButton.tscn" type="PackedScene" id=10]
[ext_resource path="res://styles/OptionButtonHover.tres" type="StyleBox" id=11]
[ext_resource path="res://styles/OptionButtonNormal.tres" type="StyleBox" id=12]
[ext_resource path="res://menus/ScrollList.gd" type="Script" id=13]
[ext_resource path="res://styles/PanelStyleOpaque.tres" type="StyleBox" id=14]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
const float MATH_PI	= float( 3.14159265359 );
uniform float FREQ_RANGE = 64.0;
uniform sampler2D audio : hint_white;
float getfrequency(float x) {
	return texture(audio, vec2(floor(x * FREQ_RANGE) / FREQ_RANGE, 0.0)).x + 0.06;
}
float getfrequency_smooth(float x) {
	float index = floor(x * FREQ_RANGE) / FREQ_RANGE;
    float next = floor(x * FREQ_RANGE + 1.0) / FREQ_RANGE;
	return mix(getfrequency(index), getfrequency(next), smoothstep(0.0, 1.0, fract(x * FREQ_RANGE)));
}
void Rotate( inout vec2 p, float a ) 
{
	p = cos( a ) * p + sin( a ) * vec2( p.y, -p.x );
}

float Circle( vec2 p, float r )
{
    return ( length( p / r ) - 1.0 ) * r;
}

float Rand( vec2 c )
{
	return fract( sin( dot( c.xy, vec2( 12.9898, 78.233 ) ) ) * 43758.5453 );
}

float saturate( float x )
{
	return clamp( x, 0.0, 1.0 );
}

void BokehLayer( inout vec4 color, vec2 p, vec3 c )   
{
    float wrap = 450.0;    
    if ( mod( floor( p.y / wrap + 0.5 ), 2.0 ) == 0.0 )
    {
        p.x += wrap * 0.5;
    }    
    
    vec2 p2 = mod( p + 0.5 * wrap, wrap ) - 0.5 * wrap;
    vec2 cell = floor( p / wrap + 0.5 );
    float cellR = Rand( cell );
        
    c *= fract( cellR * 3.33 + 3.33 );    
    float radius = mix( 30.0, 70.0, fract( cellR * 7.77 + 7.77 ) );
    p2.x *= mix( 0.9, 1.1, fract( cellR * 11.13 + 11.13 ) );
    p2.y *= mix( 0.9, 1.1, fract( cellR * 17.17 + 17.17 ) );
    
    float sdf = Circle( p2, radius );
    float circle = 1.0 - smoothstep( 0.0, 1.0, sdf * 0.04 );
    float glow = exp( -sdf * 0.025 ) * 0.3 * ( 1.0 - circle );
    color.rgb += c * ( circle + glow );
}

void fragment()
{    
	vec2 iResolution = 1.0 / SCREEN_PIXEL_SIZE;
	vec2 uv = FRAGCOORD.xy / iResolution.xy;
	vec2 p = ( 1.0 * FRAGCOORD.xy - iResolution.xy ) / iResolution.x * 1000.0;
    
    // background
	vec3 bg = vec3(0.13, 0.07, 0.26);
	vec4 color;
	color.rgb = mix( bg, bg, dot( uv, vec2( 0.2, 0.7 ) ) );
	color.a = 0.75;
    float time = TIME - 15.0;
    
	float intensity = 1.0;
	
    Rotate( p, 0.2 + time * 0.03 );
    BokehLayer( color, p + vec2( -50.0 * time +  0.0, 0.0  ), (intensity + getfrequency_smooth(0.0) * 1.0) * vec3( 0.31, 0.19, 0.68 ) );
	Rotate( p, 0.3 - time * 0.05 );
//    BokehLayer( color, p + vec2( -70.0 * time + 33.0, -33.0 ), intensity * vec3( 0.6, 0.4, 0.2 ) );
	Rotate( p, 0.5 + time * 0.07 );
//    BokehLayer( color, p + vec2( -60.0 * time + 55.0, 55.0 ), intensity * vec3( 0.4, 0.3, 0.2 ) );
    Rotate( p, 0.9 - time * 0.03 );
    BokehLayer( color, p + vec2( -25.0 * time + 77.0, 77.0 ), (intensity + getfrequency_smooth(0.5) * 1.0) * vec3( 0.67, 0.18, 0.68 ) / 2.0 );    
    Rotate( p, 0.0 + time * 0.05 );
	
    BokehLayer( color, p + vec2( -15.0 * time + 99.0, 99.0 ), (intensity + getfrequency_smooth(1.0) * 1.0) * vec3( 0.5, 0.4, 0.4 ) );     

	COLOR = vec4( color.rgb * vec3(0.7), color.a);
}"

[sub_resource type="ShaderMaterial" id=2]
render_priority = -128
shader = SubResource( 1 )
shader_param/FREQ_RANGE = 16.0

[node name="ResultsScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 9 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Panel" parent="TextureRect"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 1250.0
margin_bottom = 690.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1220.0
margin_bottom = 660.0
size_flags_vertical = 3
custom_constants/separation = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
margin_right = 1220.0
margin_bottom = 36.0
custom_constants/separation = 19

[node name="ArtistLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 363.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 4 )
text = "DRAGONFORCE"
align = 1
valign = 1

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 382.0
margin_right = 979.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 3 )
text = "asdasdasdasdasdasdasd"
align = 1
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
margin_top = 52.0
margin_right = 1220.0
margin_bottom = 92.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_right = 219.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 6 )
text = "PERFECT"

[node name="PercentageLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 223.0
margin_right = 1220.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 6 )
text = "100.00%"
align = 2

[node name="VBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
margin_top = 108.0
margin_right = 1220.0
margin_bottom = 660.0
size_flags_vertical = 3
custom_constants/separation = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer"]
margin_bottom = 552.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer"]
visible = false
margin_right = 398.0
margin_bottom = 552.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBScrollList" type="ScrollContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer/Panel/MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 383.0
margin_bottom = 537.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer/Panel/MarginContainer/HBScrollList"]
margin_right = 60.0
margin_bottom = 144.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer/Panel/MarginContainer/HBScrollList/MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 30.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer/Panel/MarginContainer/HBScrollList/MarginContainer/VBoxContainer"]
margin_right = 368.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer/Panel/MarginContainer/HBScrollList/MarginContainer/VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 0
custom_constants/margin_left = 5
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer/Panel/MarginContainer/HBScrollList/MarginContainer/VBoxContainer/Panel/MarginContainer"]
margin_left = 5.0
margin_right = 363.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer/Panel/MarginContainer/HBScrollList/MarginContainer/VBoxContainer/Panel/MarginContainer/HBoxContainer"]
margin_top = 10.0
margin_right = 190.0
margin_bottom = 30.0
text = "MACHINATIONS A"
align = 2
valign = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer/Panel/MarginContainer/HBScrollList/MarginContainer/VBoxContainer/Panel/MarginContainer/HBoxContainer"]
margin_left = 194.0
margin_top = 10.0
margin_right = 358.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "100%"
align = 2
valign = 1

[node name="Panel2" type="Panel" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer/Panel/MarginContainer/HBScrollList/MarginContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 368.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 14 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer/Panel/MarginContainer/HBScrollList/MarginContainer/VBoxContainer/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 0
custom_constants/margin_left = 5
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer/Panel/MarginContainer/HBScrollList/MarginContainer/VBoxContainer/Panel2/MarginContainer"]
margin_left = 5.0
margin_right = 363.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer/Panel/MarginContainer/HBScrollList/MarginContainer/VBoxContainer/Panel2/MarginContainer/HBoxContainer"]
margin_top = 10.0
margin_right = 184.0
margin_bottom = 30.0
text = "MIKU'S Tea Party"
align = 2
valign = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer/Panel/MarginContainer/HBScrollList/MarginContainer/VBoxContainer/Panel2/MarginContainer/HBoxContainer"]
margin_left = 188.0
margin_top = 10.0
margin_right = 358.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "100%"
align = 2
valign = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer"]
margin_right = 1220.0
margin_bottom = 552.0
size_flags_horizontal = 3
custom_constants/separation = 25

[node name="Panel2" type="Panel" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer2"]
margin_right = 1220.0
margin_bottom = 446.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer2/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer2/Panel2/MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 1190.0
margin_bottom = 416.0

[node name="RatingResultsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer2/Panel2/MarginContainer/VBoxContainer"]
margin_right = 1160.0
margin_bottom = 224.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExtraDataPanel" type="Panel" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer2/Panel2/MarginContainer/VBoxContainer"]
margin_top = 228.0
margin_right = 1160.0
margin_bottom = 386.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.7

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer2/Panel2/MarginContainer/VBoxContainer/ExtraDataPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer2/Panel2/MarginContainer/VBoxContainer/ExtraDataPanel/MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 1145.0
margin_bottom = 143.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer2/Panel2/MarginContainer/VBoxContainer/ExtraDataPanel/MarginContainer/VBoxContainer"]
margin_right = 1130.0
margin_bottom = 40.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RatingLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer2/Panel2/MarginContainer/VBoxContainer/ExtraDataPanel/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_right = 1023.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 6 )
text = "TOTAL NOTES"

[node name="ComboLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer2/Panel2/MarginContainer/VBoxContainer/ExtraDataPanel/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 1027.0
margin_right = 1130.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
custom_fonts/font = ExtResource( 6 )
text = "700"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer2/Panel2/MarginContainer/VBoxContainer/ExtraDataPanel/MarginContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 1130.0
margin_bottom = 84.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RatingLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer2/Panel2/MarginContainer/VBoxContainer/ExtraDataPanel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 1023.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 6 )
text = "COMBO"

[node name="ComboLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer2/Panel2/MarginContainer/VBoxContainer/ExtraDataPanel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 1027.0
margin_right = 1130.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
custom_fonts/font = ExtResource( 6 )
text = "700"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer2/Panel2/MarginContainer/VBoxContainer/ExtraDataPanel/MarginContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 1130.0
margin_bottom = 128.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RatingLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer2/Panel2/MarginContainer/VBoxContainer/ExtraDataPanel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 901.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 6 )
text = "SCORE"

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer2/Panel2/MarginContainer/VBoxContainer/ExtraDataPanel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 905.0
margin_right = 1130.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
custom_fonts/font = ExtResource( 6 )
text = "131231412"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer2"]
margin_top = 471.0
margin_right = 1220.0
margin_bottom = 552.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
alignment = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer2/Control" instance=ExtResource( 10 )]
margin_left = 453.0
margin_top = 0.0
margin_right = 597.0
margin_bottom = 81.0
custom_styles/hover = ExtResource( 11 )
custom_styles/normal = ExtResource( 12 )
text = "Retry"
align = 0

[node name="RetryButton2" parent="MarginContainer/VBoxContainer/VBoxContainer2/VBoxContainer/VBoxContainer2/Control" instance=ExtResource( 10 )]
margin_left = 601.0
margin_top = 0.0
margin_right = 766.0
margin_bottom = 81.0
custom_styles/hover = ExtResource( 11 )
custom_styles/normal = ExtResource( 12 )
text = "Return"
align = 0
